[Enc] Substitute /dev/random in enclave
Summary: JDK reads two specicial files /dev/random or /dev/urandom to get
pseudorandom random number, but they may not be available in the enclave
environment. So we substitute the reading with native calls.

Test Plan: all tests pass

Reviewers: lei.yul, jeffery.wsj, sanhong.lsh

Issue: https://aone.alibaba-inc.com/v2/project/1072790/task/41639424

CR:
https://code.aone.alibaba-inc.com/java-tee/JavaEnclave/codereview/8760487